--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container">
-  b5-row
-</div>
+<!-- <app-dasboard-professeur></app-dasboard-professeur> -->
+<!-- <app-liste-evaluation></app-liste-evaluation> -->
+
+<router-outlet></router-outlet>
+
