--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
 
-<app-apprenant></app-apprenant>
-<!-- <app-detail-apprenant></app-detail-apprenant> -->
+<!-- <app-administrateur></app-administrateur>
+ -->
