--- a/src/app/dasboard-professeur/dasboard-professeur.component.html
+++ b/src/app/dasboard-professeur/dasboard-professeur.component.html
@@ -120,7 +120,7 @@
 
       </div>
 
-      <button routerLink="Programmer">Programmer une Evaluaion</button>
+      <button class="btn btn-primary" routerLink="Programmer">Programmer une Evaluaion</button>
       
 
 
@@ -158,7 +158,7 @@
               </table>
               <button  type="button" class="btn btn-primary mb-5 mt-5">Attribuer les Notes</button>
         </form>
-      </div>
+        </div>
     </div>
   </div>
 </div>
