--- a/src/app/liste-evaluation/liste-evaluation.component.html
+++ b/src/app/liste-evaluation/liste-evaluation.component.html
@@ -1,5 +1,5 @@
 
-<table class="table container">
+<table class="table container" *ngIf="!modifierEvaluation">
     <thead>
       <tr>
         <th scope="col">evaluation</th>
@@ -12,18 +12,107 @@
 
       </tr>
     </thead>
-    <tbody *ngFor=" let elementEvaluation of listeEvaluation" >
+    <tbody *ngFor=" let elementEvaluation of listeEvaluation; let i = index" >
       <tr>
-        <th scope="row"> {{elementEvaluation. idEvaluation}}</th>
+        <th>{{elementEvaluation. idEvaluation}}</th>
         <td >{{elementEvaluation. anneeAcademic}}</td>
         <td > {{elementEvaluation. classe}}</td>
         <td > {{elementEvaluation. matiere}}</td>
         <td >{{elementEvaluation. type}}</td>
         <td > {{elementEvaluation.date}}</td>   
         <td > {{elementEvaluation. etat}}</td>  
-        <button class="btn btn-warning">Modifier</button> 
-        <button class="btn btn-success">Archiver</button> 
+        <button type="button" class="btn btn-warning" (click)="  evaluationModifiee(i+1)">Modifier</button> 
+        <button type="button" class="btn btn-success">Archiver</button> 
       </tr>
       
     </tbody>
   </table>
+
+
+  <!-- modification unitaire -->
+
+      <!-- Modifier une Evaluation -->
+<div class="container" *ngIf="modifierEvaluation">
+  <div class="programme_evaluation m-5 container" *ngFor="let item of saveTable">
+    <div class="enrollHeader">
+      <h4>Modifier une Evaluation</h4>
+    </div>
+    <section class="enroll">
+      <form action="#" class="form" >
+        <div class="input-box">
+          <label>ANNEE ACADEMIQUE</label>
+          <div class="column">
+            <div class="select-box">
+              <select name="select1"  [(ngModel)]="item.anneeAcademic">
+                <option value="2023-2024">2023-2024</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="input-box">
+          <label>SEMESTRE</label>
+          <div class="column">
+            <div class="select-box">
+              <select name="select2"  [(ngModel)]="item.semestre" >
+                <option value=" Semestre 1">Semestre 1</option>
+                <option value="Semestre 2">Semestre 2</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="input-box">
+            <label>CLASSE</label>
+            <div class="column">
+              <div class="select-box">
+                <select name="select3"  [(ngModel)]="item.classe" >
+                  <option value="Second">Second</option>
+                  <option value="Premiere">Premiére</option>
+                  <option value="Terminal">Terminal</option>
+                </select>
+              </div>
+          </div>
+
+          <div class="column">
+
+            <div class="input-box">
+              <label>Date Evaluation</label>
+              <input name="date" type="date" placeholder="Date"  [(ngModel)]="item.date" required />
+            </div>
+          </div>
+          <div class="input-box subject">
+            <label>Matière</label>
+            <div class="column">
+              <div class="select-box">
+                <select name="select4"  [(ngModel)]="item.matiere">
+                  <option value="Maths">Maths</option>
+                  <option value="PC">PC</option>
+                  <option value="Anglais">Anglais</option>
+                  <option value="Français">Français</option>
+                </select>
+              </div>
+              <div class="select-box">
+            <!-- <label>Type</label> -->
+                <select name="select5"  [(ngModel)]="item.type">
+                  <option value="Type" hidden>TYPE</option>
+                  <option value="Examen">Examen</option>
+                  <option value="Devoir">Devoir</option>
+                </select>
+
+                <p></p>
+              </div>
+            </div>
+          </div>       
+          <div class=" text-center d-flex">
+            <button type="submit" class="btnlast btn btn-primary me-3"  routerLink="/listeEvaluation">Enregistrer</button>
+            <button type="button" class="btnlast btn btn-danger " (click)="retour()">Annuler</button>
+
+        </div>
+        </div>
+      </div>
+    
+      </form>
+    </section>
+  </div>
+
+</div>
