--- a/src/app/attribuer-note-evaluation/attribuer-note-evaluation.component.html
+++ b/src/app/attribuer-note-evaluation/attribuer-note-evaluation.component.html
@@ -1,35 +1,31 @@
-      
 <!-- attribuer note -->
 <div class="secondCard m-5">
     <div class="sectionNotes m-5">
       <h4 class="mt-5 p-2">Attribuer des Notes</h4>
       <form>
-          <label class="mt-4 fs-4" for="evaluation ">Évaluation : </label>&nbsp; &nbsp;
-        <!-- <input type="date" placeholder="Date" required />&nbsp; &nbsp; -->
-          <select id="evaluation" name="evaluationSelect6"  >
-              <option value="evaluation1">Evaluation 1</option>
-              <option value="evaluation2">Evaluation 2</option>
-              <option value="evaluation3">Evaluation 3</option>
-          </select>&nbsp; &nbsp;
-          
-          <table class="mt-5">
-              <thead>
-                  <tr>
-                      <th>Apprenant</th>
-                      <th>Note</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                      <td>Apprenant 1</td>
-                      <td>
-                          <input type="number" name="note1" >
-                      </td>
-                  </tr>    
-
-              </tbody>
-          </table>
-          <button  type="button" class="btn btn-primary mb-5 mt-5">Attribuer les Notes</button>
-    </form>
+        <label class="mt-4 fs-4" for="evaluation">Évaluation : </label>&nbsp; &nbsp;
+        <select id="evaluation" name="evaluationSelect6" [(ngModel)]="selectedEvaluation" required>
+          <option *ngFor="let evaluation of evaluations" [value]="evaluation">{{ evaluation }}</option>
+        </select>&nbsp; &nbsp;
+  
+        <table class="mt-5">
+          <thead>
+            <tr>
+              <th>Apprenant</th>
+              <th>Note</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let apprenant of apprenantsParEvaluation[selectedEvaluation]">
+              <td>{{ apprenant.nom }}</td>
+              <td>
+                <input type="number" name="note1" [(ngModel)]="apprenant.note" required>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <button type="button" class="btn btn-primary mb-5 mt-5" (click)="attribuerNotes()">Attribuer les Notes</button>
+      </form>
     </div>
-</div>
+  </div>
+  
