--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,16 +4,16 @@
   </div>
 
   <div class="form-floating mb-3">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" [(ngModel)]="mail"> 
     <label for="floatingInput">Email address</label>
   </div>
   <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" [(ngModel)]="password">
     <label for="floatingPassword">Password</label>
   </div>
   <div>
     <button class="btn btn-primary mt-3 w-100" (click)="connexion()">
       Se connecter
-    </button>
+    </button>   
   </div>
 </div>
