--- a/src/app/modules/admin/components/professeurs/add-professeurs/add-professeurs.component.html
+++ b/src/app/modules/admin/components/professeurs/add-professeurs/add-professeurs.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <div class="alert alert-primary text-center" role="alert">
+    <div class="alert alert-primary text-center" style="color: wh;" role="alert">
         Ajout d'un formateur
     </div>
     
