--- a/src/app/modules/admin/components/apprenants/details-apprenant/details-apprenant.component.html
+++ b/src/app/modules/admin/components/apprenants/details-apprenant/details-apprenant.component.html
@@ -13,11 +13,11 @@
           </div>
           <div class="col-md-6" >
             <div class="card-body">
-              <h1 class="card-title nom-connecter-apprenant"> Nom Complet</h1>
+              <h1 class="card-title nom-connecter-apprenant"> Bobo Diallo </h1>
               <p class="card-text"> <span class="fw-bold">Matricule : </span>N00257</p>
               <p class="card-text"> <span class="fw-bold">Address email : </span>nomcomplet@ecole.com</p>
-              <p class="card-text"> <span class="fw-bold">Classe : </span>1ére</p>
-              <p class="card-text"> <span class="fw-bold">Telephone : </span>77 000 00 00</p>
+              <p class="card-text"> <span class="fw-bold">Classe : </span>Premiere</p>
+              <p class="card-text"> <span class="fw-bold">Telephone : </span>770000000</p>
             </div>
           </div>
         </div>
