--- a/src/app/detail-apprenant/detail-apprenant.component.html
+++ b/src/app/detail-apprenant/detail-apprenant.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-md-6" >
               <div class="card-body">
-                <h1 class="card-title nom-connecter-apprenant"> Nom Complet</h1>
+                <h1 class="card-title nom-connecter-apprenant" {{apprenant.nom}}> Bobo Diallo</h1>
                 <p class="card-text"> <span class="fw-bold">Matricule : </span>N00257</p>
                 <p class="card-text"> <span class="fw-bold">Address email : </span>nomcomplet@ecole.com</p>
                 <p class="card-text"> <span class="fw-bold">Classe : </span>1ére</p>
